<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single"

        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/perfilbar"
            android:title="@string/Inicio"
            />
        <item
            android:id="@+id/nav_promociones"
            android:icon="@drawable/promo"
            android:title="@string/Promociones" />
        <item
            android:id="@+id/nav_membresia"
            android:icon="@drawable/membresia"
            android:title="@string/Membresias" />
        <item
            android:id="@+id/nav_Metodos"
            android:icon="@drawable/metodo"
            android:title="@string/Metodos"
            />
        <item
            android:id="@+id/nav_Vauchers"
            android:icon="@drawable/vaucher"
            android:title="@string/MisMembresias" />
        <item
            android:id="@+id/nav_Redimir"
            android:icon="@drawable/redimir"
            android:title="@string/Redimir" />
        <item
            android:id="@+id/nav_Codigo"
            android:icon="@drawable/referir"
            android:title="@string/Codigo" />
        <item
            android:id="@+id/nav_Soporte"
            android:icon="@drawable/soporte"
            android:title="@string/Soporte" />

    </group>



</menu>


