<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Actvity.RecuperarContra">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m_32dp"
            android:layout_marginEnd="@dimen/m_32dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/m_15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoExs"
                android:layout_width="190dp"
                android:layout_height="150dp"
                android:background="@drawable/logowhite"
                />

            <TextView
                android:id="@+id/nomLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/recuperar_contrasenia"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nomUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/m_32dp"
                android:text="@string/usuario"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idTxtUserName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:backgroundTint="@color/white"
                android:hint="@string/ingresa"
                android:importantForAutofill="no"
                android:paddingStart="@dimen/m_10dp"
                android:background="@drawable/border_redondo_login"
                android:textColor="@color/black"
                android:textColorHint="#9C000000"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/correo_electr_nico"
                android:textColor="@color/white"
                android:textSize="22sp" />


            <EditText
                android:id="@+id/idTxtUserEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:hint="@string/ingresa2"
                android:importantForAutofill="no"
                android:paddingStart="@dimen/m_10dp"
                android:background="@drawable/border_redondo_login"
                android:textColor="@color/black"
                android:textColorHint="#9C000000"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_5dp"
                android:text="@string/msjRecuperar"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/idBtnRecuperarPasword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/m_32dp"
                android:text="@string/enviarbtnrecuperar"
                android:background="@drawable/color_btninicio"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/m_10dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txtNC"
                    android:layout_width="218dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="1dp"
                    android:gravity="left"
                    android:text="@string/txtinformativo"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/idtxtregistrarse"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/idtxtregistrarse"
                    android:layout_width="114dp"
                    android:layout_height="31dp"
                    android:gravity="left"
                    android:text="@string/sing_up"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtNC"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>