<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Actvity.Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_toolbar"
        android:layout_marginTop="264dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/btnregresar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="5dp"
                android:layout_marginLeft="1dp"
                android:contentDescription="@string/str_imagenesdescription"
                android:src="@drawable/atras" />


            <TextView
                android:layout_width="229dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/registro"
                android:textColor="@color/gris"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="375dp"
        android:layout_height="302dp"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_inputText"
            android:layout_marginStart="@dimen/m_22dp"
            android:layout_marginTop="@dimen/m_15dp"
            android:layout_marginEnd="@dimen/m_22dp"
            android:elevation="@dimen/m_10dp"
            app:cardCornerRadius="@dimen/m_10dp"
            app:cardElevation="@dimen/m_10dp">

            <EditText
                android:id="@+id/idTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColorHint="@color/gris"
                android:textColor="@color/gris"
                android:gravity="center"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:inputType="text"
                android:outlineProvider="background"
                android:paddingStart="@dimen/m_15dp"
                tools:ignore="RtlSymmetry" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_inputText"
            android:layout_marginStart="@dimen/m_22dp"
            android:layout_marginTop="@dimen/m_15dp"
            android:layout_marginEnd="@dimen/m_22dp"
            android:elevation="@dimen/m_10dp"
            app:cardCornerRadius="@dimen/m_10dp"
            app:cardElevation="@dimen/m_10dp">

            <EditText
                android:id="@+id/idTxtTelefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@color/white"
                android:textColorHint="@color/gris"
                android:textColor="@color/gris"
                android:gravity="center"
                android:hint="@string/n_mero_de_tel_fono"
                android:inputType="phone"
                android:outlineProvider="background"
                android:paddingStart="@dimen/m_15dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_inputText"
            android:layout_marginStart="@dimen/m_22dp"
            android:layout_marginTop="@dimen/m_10dp"
            android:layout_marginEnd="@dimen/m_22dp"
            android:elevation="@dimen/m_10dp"
            app:cardCornerRadius="@dimen/m_10dp"
            app:cardElevation="@dimen/m_10dp">

            <EditText
                android:id="@+id/idTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/correo_electr_nico"
                android:background="@color/white"
                android:textColorHint="@color/gris"
                android:textColor="@color/gris"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:outlineProvider="background"
                android:paddingStart="@dimen/m_15dp"
                tools:ignore="RtlSymmetry" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_inputText"
            android:layout_marginStart="@dimen/m_22dp"
            android:layout_marginTop="@dimen/m_10dp"
            android:layout_marginEnd="@dimen/m_22dp"
            android:elevation="@dimen/m_10dp"
            app:cardCornerRadius="@dimen/m_10dp"
            app:cardElevation="@dimen/m_10dp">

            <EditText
                android:id="@+id/idTxtNumberIdentification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColorHint="@color/gris"
                android:textColor="@color/gris"                android:gravity="center"
                android:hint="@string/identificacion"
                android:importantForAutofill="no"
                android:inputType="number"
                android:outlineProvider="background"
                android:paddingStart="@dimen/m_15dp"
                tools:ignore="RtlSymmetry" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="416dp"
        android:layout_height="267dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondobtn" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idBtnRegistrarme"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/crear_usuario"
        android:background="@drawable/botones_fondo"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="@dimen/m_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIniciarSesion2"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/botones_fondo"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="@dimen/m_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnRegistrarme">

    </androidx.appcompat.widget.AppCompatButton>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="378dp"
        android:layout_height="204dp"
        android:layout_marginBottom="386dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/logoregistro" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>