<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbackgroundmyclub"
    tools:context=".Actvity.CambiarContrasenaActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m_32dp"
            android:layout_marginEnd="@dimen/m_32dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/m_15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/logoExs"
                android:layout_width="190dp"
                android:layout_height="150dp"
                android:background="@drawable/logowhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.068" />

            <TextView
                android:id="@+id/nomLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/cambiarmsj"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.277" />

            <TextView
                android:id="@+id/nomUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/m_32dp"
                android:text="@string/nuevacontra"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gris"
                android:hint="@string/nuevacontra"
                app:boxCornerRadiusBottomEnd="@dimen/m_8dp"
                app:boxCornerRadiusBottomStart="@dimen/m_8dp"
                app:boxCornerRadiusTopEnd="@dimen/m_8dp"
                app:boxCornerRadiusTopStart="@dimen/m_8dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/gris"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idnuevacontra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/border_redondo_login"
                    android:inputType="textPassword"
                    android:textColor="@color/gris"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:visibility="gone"
                android:id="@+id/nomPasw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/nuevacontraa"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/edPasw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.161"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:hint="@string/nuevacontrasena"
                android:textColorHint="@color/gris"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/m_8dp"
                app:boxCornerRadiusBottomStart="@dimen/m_8dp"
                app:boxCornerRadiusTopEnd="@dimen/m_8dp"
                app:boxCornerRadiusTopStart="@dimen/m_8dp"
                app:endIconTint="@color/gris"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idconfirmarcontra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/border_redondo_login"
                    android:inputType="textPassword"
                    android:textColor="@color/gris" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCambiarContrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/color_btninicio"
                android:text="@string/confirmarvtn"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/m_10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txtNC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mensajecontra2"
                    android:textAlignment="center"
                    android:textColor="@color/zxing_status_text"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>